[metadata]
name = faultsim
version = 0.0.1
author = Max Chen
author_email = immaxchen@gmail.com
description = Basic combinational logic circuit fault simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/immaxchen/faultsim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
include = faultsim, faultsim.*
